gitlab/deploy-gitlab.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-09-06T08:44:32Z"
  generation: 1
  labels:
    app: gitlab-gitlab-ce
    chart: gitlab-ce-0.2.2
    heritage: Tiller
    release: gitlab
  name: gitlab-gitlab-ce
  namespace: default
  resourceVersion: "129555"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/gitlab-gitlab-ce
  uid: 784b062a-3eb2-44a2-bd9e-c090da3ef47f
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      app: gitlab-gitlab-ce
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gitlab-gitlab-ce
    spec:
      containers:
      - env:
        - name: GITLAB_OMNIBUS_CONFIG
          valueFrom:
            configMapKeyRef:
              key: gitlab_omnibus_config
              name: gitlab-gitlab-ce
        - name: GITLAB_ROOT_PASSWORD
        - name: EXTERNAL_URL
          value: https://karis.bxsoft.com
        - name: DB_HOST
          value: gitlab-postgresql
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: db-user
              name: gitlab-gitlab-ce
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: db-password
              name: gitlab-gitlab-ce
        - name: DB_DATABASE
          value: gitlab
        - name: REDIS_HOST
          value: gitlab-redis
        - name: REDIS_PASSWORD
          valueFrom:
            secretKeyRef:
              key: redis-password
              name: gitlab-gitlab-ce
        image: gitlab/gitlab-ce:12.2.4-ce.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /help
            port: http
            scheme: HTTP
          initialDelaySeconds: 200
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: gitlab-gitlab-ce
        ports:
        - containerPort: 22
          name: ssh
          protocol: TCP
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /help
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-etc
          subPath: gitlab-etc
        - mountPath: /gitlab-data
          name: gitlab-data
          subPath: gitlab-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gitlab-etc
        persistentVolumeClaim:
          claimName: nfs-pvc
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: nfs-pvc
status:
  conditions:
  - lastTransitionTime: "2019-09-06T08:44:33Z"
    lastUpdateTime: "2019-09-06T08:44:33Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
